salesforce/force-app/main/default/objects/Stand_Up_Bag_Detail__c/Stand_Up_Bag_Detail__c.object-meta.xml
<CustomObject>
    <description>Stand-up bag packaging costs</description>
    <label>Stand Up Bag Detail</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stand Up Bag Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>