salesforce/force-app/main/default/objects/Stand_Up_Bag_Detail__c/fields/Art_Preparation__c.field-meta.xml
<CustomField>
    <fullName>Art_Preparation__c</fullName><label>Art Preparation</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>