salesforce/force-app/main/default/objects/Stand_Up_Bag_Detail__c/fields/Bag_Material__c.field-meta.xml
<CustomField>
    <fullName>Bag_Material__c</fullName><label>Bag Material</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>