salesforce/force-app/main/default/objects/Stand_Up_Bag_Detail__c/fields/Bag_Size__c.field-meta.xml
<CustomField>
    <fullName>Bag_Size__c</fullName><label>Bag Size</label><length>100</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>