salesforce/force-app/main/default/objects/Stand_Up_Bag_Detail__c/fields/Fill_Weight__c.field-meta.xml
<CustomField>
    <fullName>Fill_Weight__c</fullName><label>Fill Weight</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>