salesforce/force-app/main/default/objects/Stand_Up_Bag_Detail__c/fields/Research_Development__c.field-meta.xml
<CustomField>
    <fullName>Research_Development__c</fullName><label>R&D Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>