salesforce/force-app/main/default/objects/Stand_Up_Bag_Detail__c/fields/Secondary_Packout__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Packout__c</fullName><label>Secondary Packout</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>