salesforce/force-app/main/default/objects/Stand_Up_Bag_Detail__c/fields/Total_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Cost__c</fullName><label>Total Unit Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>